<resources>
    <string name="app_name">My Resume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_name">Eunice Kamau </string>
    <string name="job_title"> Software Engineer </string>

    <!-- About me -->
    <string name="master_school"> Maharishi International University </string>
    <string name="master_skill"> Master Degree of Computer Science </string>
    <string name="bachelor_school"> University of Pune </string>
    <string name="bachelor_skill">  Bachelor Degree of Computer Science </string>
    <string name="about_me"> I am a full stack developer in PHP with over Five-year experience in the E-commerce, health care and stock product domain. I used Magento2, CakePHP, Zend, and Laravel framework for backend. Moreover, I use raw PHP and Laravel to create web service API.
and HTML, JavaScript, CSS, Query, Angular7, and Bootstrap for front-end, and MySQL for a database</string>

    <!-- Work Experience -->
    <string name="company_1"> Wattanak Inc, </string>
    <string name="position_1"> Software Engineer </string>
    <string name="project_title_1"> Magento2 Demo </string>
    <string name="desc_project_1"> E-commerce Magento2 </string>

    <string name="company_2">  UDAYA Technology Co, Ltd</string>
    <string name="position_2"> Senior Full Stack Developer </string>
    <string name="project_title_2"> EMR (Electric Media Record) </string>
    <string name="desc_project_2"> Web-base application for heath care </string>

    <string name="company_3"> SDIGIT </string>
    <string name="position_3"> Web Developer </string>
    <string name="project_title_3"> Dynamor </string>
    <string name="desc_project_3"> Dynamic web application that auto generate UI using Zend framework </string>

    <!-- Contact -->
    <string name="strength"> Strengths </string>
    <string name="strength_title"> Personal Strength </string>
    <string name="strength_desc"> I am a fast learner and solve a problem, passion person, flexible person to work in different business domains.
 </string>
    <string name="location">location</string>
    <string name="chicago_illinois_united_states">Chicago, Illinois, United States</string>
    <string name="chicago_illinois">Chicago, Illinois</string>
    <string name="professional_summary">Professional Summary</string>
    <string name="summary_description">Diligent software engineer with 5+ years experience in commercial application development. Eager to join an organization to build innovative and cutting edge business solutions for the impressive suite of clients within its global reach. In previous roles, slashed downtime by 25% and ensured 98% on-time project completion. Also identified and dealt with a significant process bottleneck that boosted coding efficiency by 35% when resolved.</string>
    <string name="analytics">Analytics</string>
    <string name="communication">Communication</string>
    <string name="analytics_desc">I am solutions-oriented and proactive at analyzing processes and business requirements as well as feedback to iresove complex business application problems and ensure quality software delivery</string>
    <string name="communication_desc">Easily communicates in multiple languages orally and in writing with stakeholders. Employ active listening and mediation skills to build consensus</string>
    <string name="technical_proficiency">Technical Proficiency</string>
    <string name="personal_email"> eunice.n.kamau@outlook.com</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">+1–(641)–819-1588</string>
    <string name="experiences">Experience</string>
    <string name="higher_education">Higher Education</string>
    <string name="masters1">Maharishi International University</string>
    <string name="master_of_science_computer_science">Master of Science, Computer Science</string>
    <string name="miu_year">2020 - 2023</string>
    <string name="tampere_university">Tampere University</string>
    <string name="msc_IT">Master of Science, Information Technology</string>
    <string name="tut_year">2014 - 2019</string>
    <string name="jkuat">Jomo Kenyatta University of Agriculture and Technology</string>
    <string name="ece_jkuat">Bachelor of Science, Electronic and Computer Engineering</string>
    <string name="jkuat_year">2004 - 2009</string>
    <string name="other_certifications">Other Certifications</string>
    <string name="nokia_corporation">Nokia Corporation</string>
    <string name="emea_nokia">Europe, Middle East and Africa (EMEA)</string>
    <string name="nokia_year">2009 - 2014</string>
    <string name="nokia_title">Customer Service Engineer</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="northern_trust_corporation">Northern Trust Corporation</string>
    <string name="chicago_united_states">Chicago, United States</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="_2021_present">2021 - present</string>
    <string name="elisa_corporation">Elisa Corporation</string>
    <string name="my_contacts">My Contacts</string>
    <string name="title_activity_inflation">inflation_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Skills -->
    <string name="add_new_skill">Add new skill</string>
    <string name="add_new">Add new skill</string>
    <string name="cancel">Cancel</string>
</resources>